--- a/react-app/public/index.html
+++ b/react-app/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Simple React App</title>
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <title>GrowFunding - Trusted Platform for Crowdfunding</title>
   </head>
   <body>
     <div id="root"></div>
